# market-parser-polygon-mcp

./: .dockerignore  .env.development  .env.example  .env.production.deleted  .eslintrc.cjs  .gitignore  .mcp.json  .mcp_FULL.json  .pre-commit-config.yaml  .prettierrc.cjs  .pylintrc  AGENTS.md  BACKEND_DEVELOPER_TEST_ADAPTATION_SUMMARY.md  BUG_REPORT_INCOMPLETE_FRONTEND_LOGGING_REMOVAL.md  CHANGELOG.md  CLAUDE.md  CLI_test_regression.sh  CORRECTED_ARCHITECTURE_RESEARCH.md  CRITICAL_BUG_ANALYSIS_FINAL.md  DEPLOYMENT-FILES-SUMMARY.txt  DEPLOYMENT-QUICKSTART.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE_AWS.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  ENHANCED_MIGRATION_PLAN_COMPREHENSIVE_REVIEW_REPORT.md  ENHANCED_MIGRATION_PLAN_CORRECTED.md  ENHANCED_MIGRATION_PLAN_REVIEW_METHODOLOGY.md  GEMINI.md  LAST_TASK_SUMMARY.md  LICENSE  LIVE_SERVER_DOCUMENTATION_TEMPLATES.md  MCP_ENFORCEMENT.md  MCP_TIMEOUT_FIXES_IMPLEMENTATION_PLAN.md  MCP_TOOL_USAGE_GUIDE.md  MIGRATION_EXECUTION_PLAN.md  ORCHESTRATION_IMPLEMENTATION_REPORT.md  PHASE_7_10_MIGRATION_STATUS_REPORT.md  PLAYWRIGHT_MCP_CONFIGURATION.md  PRODUCTION_TESTS_SUMMARY.md  (+115 more)
.claude/: settings.local.json  tech-lead-orchestrator-enforcement-test-prompt.md
.gemini/: gemini_new_task_details.md  gemini_new_task_details_migrate.md
.github/: DEPLOYMENT-CHECKLIST.md
.serena/: project.yml
config/: app.config.json  app.config.production.json  deployment.yaml  monitoring.yaml  staging.yaml
dev-dist/: sw.js  workbox-0f131789.js  workbox-83cda833.js
docs/: CLAUDE_CODE_SLASH_COMMANDS_GUIDE.md  COMPONENT_STYLING_GUIDE.md  Custom_Slash_Commands.md  DEPLOYMENT_GUIDE_AWS.md  DOCUMENTATION_INDEX.md  ENHANCED_10_PHASE_MIGRATION_ORCHESTRATION_PLAN.md  ETRADE_POLYGON_API_COMPARISON.md  ETRADE_POLYGON_API_COMPARISON_AI_TEAM.md  ETRADE_POLYGON_API_COMPARISON_FINAL.md  FEATURE_SCOPE_STOCK_DATA_GUI.md  FINTECH_DESIGN_SYSTEM.md  IBKR_POLYGON_API_COMPARISON_AI_team.md  IBKR_POLYGON_API_COMPARISON_Main_Claude_Agent.md  JSON_API_REFERENCE.md  JSON_ARCHITECTURE_GUIDE.md  MIGRATION_GUIDE.md  MIGRATION_PLAN_CORRECTIONS_SUMMARY.md  MULTI_BROKER_POLYGON_API_COMPARISON_AI_TEAM.md  MULTI_BROKER_POLYGON_API_COMPARISON_FINAL.md  MULTI_BROKER_POLYGON_API_COMPARISON_Main_Claude_Agent.md  OPENAI_CUSTOM_TOOLS_REFERENCE.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PLAYWRIGHT_SLASH_COMMANDS_BEST_PRACTICES.md  PLAYWRIGHT_SLASH_COMMANDS_IMPLEMENTATION_REQUIREMENTS.md  PLAYWRIGHT_SLASH_COMMANDS_TECHNICAL_ARCHITECTURE.md  POLYGON_MCP_FORK_FUTURE_SCOPING.md  PROJECT_ENVIRONMENT_SETUP_GUIDE.md  SIMPLIFIED_ARCHITECTURE_GUIDE.md  SIMPLIFIED_JSON_INTEGRATION_GUIDE.md  SYSTEM_SIMPLIFICATION_GUIDE.md  TROUBLESHOOTING_JSON.md  TROUBLESHOOTING_SIMPLIFIED.md  TYPOGRAPHY_SYSTEM_GUIDE.md  UI_Performance_Audit_Report_2025-09-21.md  USER_GUIDE_CHAT_INTERFACE.md  USER_GUIDE_JSON_FEATURES.md  configuration-guide.md  css-structure-guide.md  dynamic_prompting_system_api_reference.md  (+21 more)
frontend/: .env.development  .env.staging  .eslintrc.cjs  LIVE_SERVER_DOCUMENTATION_TEMPLATES.md  index.html  tsconfig.json  vite.config.ts
gpt5-openai-agents-sdk-polygon-mcp/: .env.example  .gitignore  API_DOCUMENTATION.md  API_SCHEMA_SPECIFICATION.md  BUTTON_PROMPTS_ARCHITECTURE.md  CLI_BUTTON_TESTS_COMPREHENSIVE_EXECUTION_REPORT.md  CLI_BUTTON_TESTS_EXECUTION_RESULTS.md  LAST_TASK_SUMMARY.md  MIGRATION_GUIDE.md  OPENAI_STANDALONE_APP_MIGRATION_GUIDE.md  OpenAI_Vite_Optimization_Plan.md  PHASE_6A_DOCUMENTATION_COMPLETION_SUMMARY.md  PLAYWRIGHT_B001-B012_TEST_EXECUTION_REPORT.md  PLAYWRIGHT_TESTING_VALIDATION_REPORT.md  POST_MORTEM_BROKEN_GUI_2025-09-07.md  PRE_MIGRATION_TEST_RESULTS_2025-09-07.md  README.md  TASK5_COMPREHENSIVE_VALIDATION_REPORT.md  TECHNICAL_FIXES_SUMMARY_PHASES_1-5.md  TEST_VALIDATION_CHECKLIST_POST_FIXES.md  TEST_VALIDATION_REPORT.md  mcp_method_button_test_execution_report_2025-01-10.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  test_api.py  test_pytest.py  tsconfig.json
playwright-report/: index.html
playwright_mcp_tests/: README.md  comprehensive_tests.js  mcp_test_runner.js  priority_tests.js  remaining_comprehensive_tests.js  test_framework.js
public/: sw-cleanup.js
src/: __init__.py  example_json_responses.py  json_debug_logger.py  json_parser.py  json_schemas.py  main.py  prompt_templates.py  (+3 more)
(+712 files in other folders)
