[project]
name = "market-parser-polygon-mcp"
version = "1.0.0"
description = "This shows off the Polygon.io MCP server in action within an agentic workflow using Pydantic AI."
authors = [{ name = "Alex Novotny", email = "alex.novotny@polygon.io" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[openai,mcp]",
    "python-dotenv",
    "rich",
    "gradio>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Package configuration for new directory structure
py-modules = ["market_parser_demo", "chat_ui"]
packages = ["src", "stock_data_fsm"] 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-q"
]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    "src", 
    "stock_data_fsm"
]
