[project]
name = "market-parser-polygon-mcp"
version = "0.1.0"
description = "Agentic workflow demo using GPT-5, OpenAI Agents SDK and Polygon.io"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Alex Novotny" }
]
license = { file = "LICENSE" }
dependencies = [
  "openai-agents==0.2.9",
  "pydantic",
  "rich",
  "python-dotenv",
  "openai>=1.99.0,<1.100.0",
  "fastapi",
  "uvicorn[standard]",
  "aiofiles>=24.1.0",
  "python-lsp-server[all]>=1.13.1",
  "openai-agents-mcp>=0.0.8",
  "polygon-api-client>=1.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pylint>=3.0.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["src"]
known_third_party = ["openai", "pydantic", "rich", "fastapi", "uvicorn", "agents"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["openai.*", "rich.*", "fastapi.*", "uvicorn.*", "agents.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.*"]
disallow_untyped_defs = true
warn_unused_ignores = true
